--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background-color: #f8f9fa; }
+    body {
+      background-color: #f8f9fa;
+    }
     .center-toast {
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 1060;
+      background-color: #000 !important;  /* خلفية سوداء */
+      color: #fff !important;             /* خط أبيض */
+      border: none;
+      min-width: 300px;
+    }
+    .center-toast .btn-close {
+      filter: invert(1); /* زر الإغلاق أبيض */
     }
   </style>
 </head>
@@ -42,13 +51,13 @@
     </div>
   </div>
 
-  <!-- Toast centered on screen (لا يختفي تلقائيًا) -->
-  <div class="toast align-items-center text-bg-success border-0 center-toast"
+  <!-- Toast centered on screen with black background and white text -->
+  <div class="toast align-items-center center-toast"
        role="alert" aria-live="assertive" aria-atomic="true"
        data-bs-autohide="false" id="successToast">
     <div class="d-flex">
       <div class="toast-body fw-bold text-center w-100" id="toastMsg">تم الجمع بنجاح!</div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto"
+      <button type="button" class="btn-close me-2 m-auto"
               data-bs-dismiss="toast" aria-label="إغلاق"></button>
     </div>
   </div>
@@ -77,7 +86,7 @@
       resultEl.textContent = `✅ المجموع: ${sum}`;
       resultEl.classList.remove('d-none');
 
-      // عرض رسالة Toast
+      // Show toast
       toastMsg.textContent = `✅ تم الجمع بنجاح! المجموع: ${sum}`;
       const toast = new bootstrap.Toast(toastEl);
       toast.show();
